# rdprrap

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  about.toml  about.txt.hbs  deny.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/endpwrap-dll/: Cargo.toml  build.rs  endpwrap.def
crates/endpwrap-dll/src/: lib.rs  patches.rs  x86_walk.rs
crates/offset-finder/: Cargo.toml
crates/offset-finder/src/: main.rs  xref_x86.rs
crates/patcher/: Cargo.toml
crates/patcher/src/: disasm.rs  disasm_tests.rs  error.rs  lib.rs  patch.rs  pattern.rs  pattern_tests.rs  pe.rs
crates/rdprrap-check/: Cargo.toml
crates/rdprrap-check/src/: disc_reason.rs  elevation.rs  gui.rs  main.rs  nla_guard.rs  rdp.rs
crates/rdprrap-conf/: Cargo.toml
crates/rdprrap-conf/src/: diag.rs  elevation.rs  gui.rs  listener.rs  main.rs  registry.rs  service_query.rs  settings.rs  version.rs
crates/rdprrap-installer/: Cargo.toml
crates/rdprrap-installer/src/: acl.rs  cli.rs  contract.rs  elevation.rs  firewall.rs  install.rs  main.rs  paths.rs  plan.rs  registry.rs  service.rs  uninstall.rs  version.rs
crates/rdprrap-installer/src/snapshots/: rdprrap_installer__plan__tests__manifest_snapshot.snap
crates/termwrap-dll/: Cargo.toml  build.rs  termwrap.def
crates/termwrap-dll/src/: lib.rs
crates/termwrap-dll/src/patches/: def_policy.rs  local_only.rs  mod.rs  nonrdp.rs  property_device.rs  single_user.rs  sl_policy.rs
crates/umwrap-dll/: Cargo.toml  build.rs  umwrap.def
crates/umwrap-dll/src/: lib.rs  patches.rs  thread.rs  x86_walk.rs
docs/: CHANGELOG.ko.md  CODE_OF_CONDUCT.ko.md  CONTRIBUTING.ko.md  README.ko.md  SECURITY.ko.md  TESTING.ko.md  TESTING.md  TESTING_WINPODX.ko.md  TESTING_WINPODX.md
tmp-igbkp/: README.md  archive.sh  purge-history.sh  restore.sh
