[workspace]
members = [
    "crates/patcher",
    "crates/termwrap-dll",
    "crates/umwrap-dll",
    "crates/endpwrap-dll",
    "crates/offset-finder",
    "crates/rdprrap-installer",
    "crates/rdprrap-check",
    "crates/rdprrap-conf",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
# Internal workspace — the crates here are DLL proxies and glue binaries
# that target a specific Windows deployment, not crates.io. Marking them
# publish = false lets cargo-deny recognise workspace path deps as
# intentional (via allow-wildcard-paths).
publish = false

[workspace.dependencies]
# Disassembler - pure Rust x86/x64 decoder
iced-x86 = { version = "1.21", default-features = false, features = ["std", "decoder", "intel", "instr_info"] }

# PE parsing
pelite = "0.10"

# Windows API
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Services",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_ProcessStatus",
    "Win32_System_RemoteDesktop",
    "Win32_Security",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
] }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI argument parsing (used by rdprrap-installer)
clap = { version = "4.5", features = ["derive"] }

# GUI (rdprrap-conf)
native-windows-gui = "1.0"
native-windows-derive = "1.0"
