[package]
name = "offset-finder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone CLI tool for termsrv.dll offset detection"

[dependencies]
patcher = { path = "../patcher" }
anyhow = { workspace = true }
pelite = { workspace = true }
iced-x86 = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
