[package]
name = "patcher"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared library for PE parsing, disassembly, pattern matching, and memory patching"

[dependencies]
iced-x86 = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
