[package]
name = "termwrap-dll"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "termsrv.dll proxy DLL — core RDP multi-session patching"

[lib]
crate-type = ["cdylib"]

[dependencies]
patcher = { path = "../patcher" }
iced-x86 = { workspace = true }
windows = { workspace = true }
