[package]
name = "umwrap-dll"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "umrdp.dll proxy DLL — USB/camera redirection"

[lib]
crate-type = ["cdylib"]

[dependencies]
patcher = { path = "../patcher" }
iced-x86 = { workspace = true }
windows = { workspace = true }
